<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coloreMedio"
    tools:context=".MostraActivity">

    <ListView
        android:id="@+id/listaCartelle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:dividerHeight="0dp"
        android:divider="@color/trasparent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/messaggio_conferma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/coloreScuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_messaggio_cancella"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="Cancella"
            android:textAlignment="textStart"
            android:textColor="@color/coloreChiaro"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/conferma_cancella_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_btn_danger"
                android:gravity="center"
                android:layout_marginRight="8dp" >

                <Button
                    android:id="@+id/conferma_cancella"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trasparent"
                    android:drawableLeft="@drawable/ic_baseline_delete_24_white"
                    android:textColor="@color/white"
                    android:text="@string/mostra_cartelle_cancella"
                    android:textAllCaps="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/annulla_cancella_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_btn_white"
                android:gravity="center">

                <Button
                    android:id="@+id/annulla_cancella"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trasparent"
                    android:drawableLeft="@drawable/ic_baseline_close_24_black"
                    android:textColor="@color/black"
                    android:text="@string/mostra_cartelle_annulla"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/messaggio_conferma_nuovo_gioco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/coloreScuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_messaggio_nuovo_gioco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="Sei sicuro di voler iniziare una nuova partita?"
            android:textAlignment="textStart"
            android:textColor="@color/coloreChiaro"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/conferma_nuovo_gioco_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_btn_chiaro"
                android:gravity="center"
                android:layout_marginRight="8dp">

                <Button
                    android:id="@+id/conferma_nuovo_gioco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trasparent"
                    android:drawableLeft="@drawable/ic_baseline_check_24_black"
                    android:drawablePadding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/mostra_cartelle_conferma"
                    android:textAllCaps="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/annulla_nuovo_gioco_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_btn_white"
                android:gravity="center">

                <Button
                    android:id="@+id/annulla_nuovo_gioco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trasparent"
                    android:drawableLeft="@drawable/ic_baseline_close_24_black"
                    android:textColor="@color/black"
                    android:text="@string/mostra_cartelle_annulla"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/messaggio_conferma_indietro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/coloreScuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_messaggio_indietro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="Sei sicuro di voler tornare al menù?"
            android:textAlignment="textStart"
            android:textColor="@color/coloreChiaro"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/conferma_indietro_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_btn_chiaro"
                android:gravity="center"
                android:layout_marginRight="8dp">

                <Button
                    android:id="@+id/conferma_indietro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trasparent"
                    android:drawableLeft="@drawable/ic_baseline_check_24_black"
                    android:drawablePadding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/mostra_cartelle_conferma"
                    android:textAllCaps="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/annulla_indietro_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_btn_white"
                android:gravity="center">

                <Button
                    android:id="@+id/annulla_indietro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trasparent"
                    android:drawableLeft="@drawable/ic_baseline_close_24_black"
                    android:textColor="@color/black"
                    android:text="@string/mostra_cartelle_annulla"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>